<resources>
    <string name="welcome">WELCOME To RURAL SECRETS</string>
    <string name="app_name">Anna</string>
    <string name="error">Error</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="hi">Hello</string>
    <string name="signup">Sign up</string>
    <string name="Register">Register</string>
    <string name="signIn">Sign in</string>
    <string name="collaborator">Collaborator</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="haveAccount">Do you already have an account?</string>
    <string name="profile">Profile</string>
    <string name="ends">Ends:</string>
    <string name="exitConfirmation">Exit confirmation</string>
    <string name="exitConfirmationQuestion">Are you sure you want to log out?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="myRoute">Routes</string>
    <string name="routeListTitle">AVAILABLE ROUTES LIST</string>
    <string name="category">Category</string>
    <string name="numberStages">Nº STAGES</string>
    <string name="discounts">Discounts</string>
    <string name="discountsUpperCase">DISCOUNTS</string>
    <string name="myDiscounts">My Discounts</string>
    <string name="myDiscountsUpperCase">MY DISCOUNTS</string>
    <string name="noDiscountsUsedMessage">YOU STILL HAVE NOT USED ANY DISCOUNT. HURRY UP!! THEY ARE WAITING</string>
    <string name="activar">Activar</string>
    <string name="notNow">Not now</string>
    <string name="CommentHint">Add a comment</string>
    <string name="comments">Comments</string>
    <string name="discountPercentageUsedDetail">Discount Percentage:</string>
    <string name="dateUsedDetail">Date:</string>

    <string name="editProfile">Edit Profile</string>

    <string name="endedSubMessage">Your subscription has ended. Please renew it to keep active as a collaborator.</string>
    <string name="collaboratorAccountCreation">Create collaborator account</string>
    <string name="pay">Pay now</string>

    <string name="resetPasswordMessage">Please, introduce your email you registered with. Then you will receive automatically an email with following instructions to make the corresponding changes. Thank you.</string>

    <string name="faqs">Faqs</string>
    <string name="ajustes">Settings</string>
    <string name="contactus"><u>Need some help? Contact us!</u></string>
    <string name="sendMailTitle">How can we help you?</string>
    <string name="hint_email">Your email address here</string>
    <string name="buttonSend">Send mail</string>
    <string name="emailTo">To</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_message">Message</string>
    <string name="supportEmail">annaApp.support@gmail.com</string>

    <string name="advertCreationTitle">ADVERT CREATION</string>
    <string name="advertEditionTitle">ADVERT EDITION</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="descriptionExplanation">Detailed Information about the advertisement</string>
    <string name="endDate">End Date</string>
    <string name="postAd">POST ADVERTISEMENT</string>
    <string name="addPicture">ADD PICTURE</string>
    <string name="updateAd">UPDATE ADVERTISEMENT</string>
    <string name="postAdMessage">Post your new offers and ads now !</string>
    <string name="addAdvert">Add advertisement</string>

    <string name="completedRoutes">Completed Routes</string>
    <string name="startedRoutes">Started Routes</string>

    <string name="changePassword">CHANGE PASSWORD</string>

    <string name="validateStation">Validate your visit</string>
    <string name="howGeTtoStation">How can we get there?</string>

    <string name="verifyAccount">Verify</string>
    <string name="resendCode">Resend Code</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu_main">MenuMain</string>

    <string name="discount_activation">Discount Activation</string>
    <string name="forgetPassword"><u>Forgot your passowrd?</u></string>

    //ALERTS
    <string name="badPasswordAlert"> The introduced password is incorrect.</string>
    <string name="passwordsNotEqual"> Passwords don\'t match. Please revalidate it.</string>
    <string name="emailFieldCannotBeEmpty"> Email field can not be empty.</string>
    <string name="SignInNotSuccessful"> It looks like signing in has not been successful. </string>
    <string name="SignUpNotSuccessful"> It looks like signing up has not been successful. </string>
    <string name="userNotRegisteredFromSignIn"> This user is not registered. You should first sign up. </string>

    <string name="catalan">Catalan</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="german">German</string>

    <string name="clientHomeMessage">Be the first one to benefit from our offers and experiences.</string>


    <string name="stationVerified">The station has been verified successfully</string>
    <string name="stationRejected">The station has not been recognized</string>
    <string name="stationAlreadyVisited">This station has already been visited, let\'s go for the next one</string>
    <string name="completedRoute">Congratulations! That was the last station. You have completed the route.</string>
    <string name="firstStation">First Station in this route, just visited. Well done!</string>
    <string name="discountVerified">The discount has been verified successfully</string>
    <string name="discountRejected">The discount has not been recognized</string>
    <string name="discountAlreadyUsed">Sorry! The discount has already been used</string>
    <string name="scanVerification">Scan Verification Response</string>


    <string name="numberDiscountsUsed">Nº Discounts Used</string>
    <string name="numberRoutesFinished">Nº Routes Finished</string>
    <string name="goToDiscounts">GO TO DISCOUNTS PAGE</string>
    <string name="emptyMyDiscounts">YOU STILL HAVE NOT USED ANY DISCOUNT. HURRY UP!! THEY ARE WAITING</string>
    <string name="usernameEdited">Username edited!</string>
    <string name="userPictureChanged">Profile picture changed successfully!</string>
    <string name="userPictureNotChanged">Could not change profile picture. Try later. </string>
    <string name="language">Language</string>
    <string name="myRoutes">My Routes</string>
    <string name="privacy">Privacy</string>
    <string name="helpFAQS">Help/FAQS</string>
    <string name="shop">SHOP</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="options">Options</string>
    <string name="noAdsYet">NO ADS YET. BE THE FIRST ONE AND POST YOURS</string>
    <string name="collaboratorInfo">A collaborator account is a premium service that will allow
the user to post, edit and delete own-created ads within the period of time established
in the subscription details. These advertisements will be published in the home page of the app
and non-collaborator users will be notified of each premium post made. \nPlease bear in mind that
ads will not appear in order so the last posted are on the top.</string>
    <string name="accountAsACollaborator">ACCOUNT AS A COLLABORATOR</string>
    <string name="paymentSuccess">Payment successful!</string>

    <string name="visited">Visited</string>
    <string name="notVisited">Not visited yet</string>
    <string name="deleteConfirmation">Are you sure you want to delete this ad ? It will be deleted from our databases as well.</string>
    <string name="deleteConfirmationTitle">Delete Confirmation</string>

</resources>