<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MenuPrincipal.Faqs.ContactUs">

    <TextView
        android:id="@+id/SendMailTextView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/sendMailTitle"
        android:fontFamily="@font/magra"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mailfromtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailTo"
        android:fontFamily="@font/magra"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/addressmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="false"
        android:editable="false"
        android:enabled="false"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:longClickable="false"
        android:text="@string/supportEmail"
        android:fontFamily="@font/magra"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/subjectmailtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_subject"
        android:fontFamily="@font/magra"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/subjectmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_subject"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/magra"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/messagetitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_message"
        android:fontFamily="@font/magra"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/messagemail"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:hint="@string/hint_message"
        android:fontFamily="@font/magra"
        android:ellipsize="end"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollHorizontally="false"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/buttonsendmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSend"
        android:fontFamily="@font/magra" />


</LinearLayout>