<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advertEditionTitle"
        android:fontFamily="@font/magra"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:fontFamily="@font/magra_bold"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/adTitleEdition"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="#17323030"
        android:hint="@string/title"
        android:paddingLeft="5dp"
        android:maxLength="50"
        android:textColor="#000000"
        android:fontFamily="@font/magra"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        android:fontFamily="@font/magra_bold"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/adDescriptionEdition"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="#17323030"
        android:hint="@string/descriptionExplanation"
        android:maxLines="3"
        android:textColor="#000000"
        android:textSize="14sp"
        android:fontFamily="@font/magra"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endDate"
        android:textSize="18sp"
        android:fontFamily="@font/magra_bold"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/adDateEdition"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="#17323030"
        android:focusable="false"
        android:paddingLeft="5dp"
        android:hint="@string/endDate"
        android:maxLength="50"
        android:textColor="#000000"
        android:fontFamily="@font/magra"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/AdbuttonAddPictureEdition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magra"
                android:text="@string/addPicture" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/adEditionPicture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/postAdEdition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:backgroundTint="#04BF17"
        android:text="@string/updateAd"
        android:fontFamily="@font/magra"/>

</LinearLayout>