<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/magra_bold"
        android:text="@string/changePassword"
        android:layout_marginBottom="150dp"/>

    <EditText
        android:id="@+id/changePasswordText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/mainactivityfragmentshape"
        android:fontFamily="@font/magra"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/changePasswordConfirmtext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/mainactivityfragmentshape"
        android:fontFamily="@font/magra"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/magra"
        android:backgroundTint="#04BF17"
        android:text="@string/changePassword"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"/>


</LinearLayout>