<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/wallpapaer"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="25dp"
    tools:context=".Register.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:fontFamily="@font/magra_bold"
        android:textColor="@color/black"
        android:textSize="48sp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            app:cardBackgroundColor="#00FFFFFF"
            android:orientation="vertical">


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayoutsignupsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magra"
                app:tabBackground="@color/white"
                app:tabIndicatorColor="#ff0000"
                app:tabSelectedTextColor="@android:color/holo_red_dark"
                app:tabTextColor="@android:color/black">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabsignup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/magra"
                    android:text="@string/signup" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabsignin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/magra"
                    android:text="@string/signIn" />


            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpagermain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:fontFamily="@font/magra" />

        </LinearLayout>


</LinearLayout>