<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.FragmentsViewPager.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="614dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernamesignup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/mainactivityfragmentshape"
            android:ems="10"
            android:hint="@string/username"
            android:fontFamily="@font/magra"
            android:inputType="text" />

        <EditText
            android:id="@+id/emailsignup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/mainactivityfragmentshape"
            android:ems="10"
            android:hint="@string/email"
            android:fontFamily="@font/magra"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordsignup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/mainactivityfragmentshape"
            android:ems="10"
            android:hint="@string/password"
            android:fontFamily="@font/magra"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordconfirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/mainactivityfragmentshape"
            android:ems="10"
            android:hint="@string/confirmpassword"
            android:fontFamily="@font/magra"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxsignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="1.4"
                android:scaleY="1.4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Create collaborator account"
                android:fontFamily="@font/magra"
                android:textAlignment="textStart"
                android:textColor="#26B505"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/info_collaborator"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="2"
                android:src="@drawable/ic_info" />


        </LinearLayout>


        <Button
            android:id="@+id/buttonsignup"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/signup"
            android:fontFamily="@font/magra"/>

        <Button
            android:id="@+id/buttonResendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BDB1B1"
            android:text="Resend Code"
            android:fontFamily="@font/magra"/>
    </LinearLayout>

</FrameLayout>