<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#200101"
    android:orientation="vertical">


    <TextView
        android:id="@+id/routesClickedName"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/magra"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="#796A5B5B"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magra"
                android:gravity="center"
                android:text="@string/category"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/routesClickedCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magra"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/routesClickedStar"
            android:layout_width="50dp"
            android:layout_height="50dp">

        </ImageView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magra"
                android:gravity="center"
                android:text="@string/numberStages"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/routesClickedNumberStages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magra"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/routesClickedMap"
        android:layout_width="match_parent"
        android:layout_height="260dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routesClickedStages"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="#796A5B5B"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#E91E63" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="5dp"
                android:text="@string/visited"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#CDDC39" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="textStart"
                android:padding="5dp"
                android:text="@string/notVisited"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
